input focus fix

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
   	</div>
   	<div id="right">
   		<div id="searchbar">
-	  		<input type="text" placeholder="Search Quora..." />
+	  		<input type="text" id="searchbox" placeholder="Search Quora..." />
   		</div>
   		<div id="content">
   		
