--- a/popup.html
+++ b/popup.html
@@ -31,6 +31,7 @@
   			<div id="search_results" class="display" style="display: none"></div>
         <div id="inbox_display" class="display" style="display: none"><p class="loading_message">Loading...</p></div>
   			<div id="notifs_display" class="display" style="display: none"></div>
+        <div id="post_display" class="display" style="display: none"></div>
   		
   		</div>
   	</div>
