finish styling question/topic pages

--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
 	  	<ul>
 	  		<li id="inbox"></li>
 	  		<li id="notifs"></li>
-	  		<li id="new"></li>
+	  		<li id="compose"></li>
 	  	</ul>
   	</div>
   	<div id="right">
@@ -32,6 +32,7 @@
         <div id="inbox_display" class="display" style="display: none"><p class="loading_message">Loading...</p></div>
   			<div id="notifs_display" class="display" style="display: none"></div>
         <div id="post_display" class="display" style="display: none"><p class="loading_message">Loading...</p></div>
+        <div id="bookmarklet_display" class="display" style="display: none"></div>
   		
   		</div>
   	</div>
