--- a/popup.html
+++ b/popup.html
@@ -32,7 +32,7 @@
         <div id="inbox_display" class="display" style="display: none"><p class="loading_message">Loading...</p></div>
   			<div id="notifs_display" class="display" style="display: none"></div>
         <div id="post_display" class="display" style="display: none"><p class="loading_message">Loading...</p></div>
-        <div id="bookmarklet_display" class="display" style="display: none"></div>
+        <div id="bookmarklet_display" class="display" style="display: none"><p class="loading_message">Loading...</p></div>
   		
   		</div>
   	</div>
